--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express": "^4.17.1",
         "fs": "^0.0.1-security",
         "morgan": "^1.9.1",
+        "node-fetch": "^2.6.0",
         "node-sass": "^4.13.1",
         "nodemon": "^2.0.2"
     }
