--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "fs": "^0.0.1-security",
         "morgan": "^1.9.1",
         "node-sass": "^4.13.1",
-        "nodemon": "^2.0.2"
+        "nodemon": "^2.0.2",
+        "request": "^2.88.2"
     }
 }
